--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy
 on:  
   workflow_dispatch:
   schedule:
-  - cron: '30 3 * * *'  #every day at 9:00 am IST
+  - cron: '30 13 * * *'  #every day at 7:00 pm IST
 
 jobs:
   deploy:
